--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
             <!-- begin brand -->
             <div class="login-header">
                 <div class="brand text-center">
-                    <span class="logo"></span> 欢迎来到360考评系统
+                    <span class="logo"></span> 欢迎来到Admin系统
                     <small class="text-danger">${msg!}</small>
                 </div>
             </div>
