--- a/src/main/resources/templates/resources/resources.html
+++ b/src/main/resources/templates/resources/resources.html
@@ -33,17 +33,29 @@
                             <h4 class="panel-title">数据列表</h4>
                         </div>
                         <div class="panel-body">
-                        <form class="form-inline">
-                        <@shiro.hasPermission name="/permissions/delete">  
-                        	<button type="button" onclick="delById();" class="btn btn-info" style="float: right; margin-right: 1px;">删除</button>
-					    </@shiro.hasPermission>
-					    <@shiro.hasPermission name="/permissions/update">  
-                        	<button type="button" onclick="update();" class="btn btn-info" style="float: right; margin-right: 1px;">修改</button>
-					    </@shiro.hasPermission>
-                        <@shiro.hasPermission name="/permissions/add">  
-                        	<button type="button" onclick="add();" class="btn btn-info" style="float: right; margin-right: 1px;">新增</button>
-					    </@shiro.hasPermission>
-                        </form>
+                            <form class="form-inline">
+                                <div class="form-group">
+                                    <label class="control-label">选择系统:</label>
+                                    <select id="systemId-search" class="arrturnRoom form-control">
+                                        <option value='' selected>全部</option>
+                                        <#if onlovSystems?? && onlovSystems?size gt 0>
+                                            <#list onlovSystems as item>
+                                                <option value='${item.id}'>${item.des}</option>
+                                            </#list>
+                                            </#if>
+                                    </select>
+                                </div>
+                                <button type="button"  onclick="search();" class="btn btn-primary">查询</button>
+                            <@shiro.hasPermission name="/permissions/delete">
+                                <button type="button" onclick="delById();" class="btn btn-info" style="float: right; margin-right: 1px;">删除</button>
+                            </@shiro.hasPermission>
+                            <@shiro.hasPermission name="/permissions/update">
+                                <button type="button" onclick="update();" class="btn btn-info" style="float: right; margin-right: 1px;">修改</button>
+                            </@shiro.hasPermission>
+                            <@shiro.hasPermission name="/permissions/add">
+                                <button type="button" onclick="add();" class="btn btn-info" style="float: right; margin-right: 1px;">新增</button>
+                            </@shiro.hasPermission>
+                            </form>
                     <table class="table table-bordered data-table" id="datatable" >
                         <thead>
                         <tr>
@@ -56,6 +68,8 @@
                             <th>资源链接</th>
                             <th>资源类型</th>
                             <th>排序</th>
+                            <th>所属系统</th>
+
                         </tr>
                         </thead>
                     </table>
@@ -174,7 +188,32 @@
                     "last": "末页"
                 } 
              },
-             "ajax": 'permissions',
+            ajax : function(data, callback, settings) {
+                //封装请求参数
+                var param = getQueryCondition(data);
+                $.ajax({
+                    type: "GET",
+                    url: 'permissions',
+                    cache : false,  //禁用缓存
+                    data: param,    //传入已封装的参数
+                    dataType: "json",
+                    success: function(result) {
+                        //封装返回数据  如果参数相同，可以直接返回result ，此处作为学习，先这么写了。
+                        var returnData = {};
+                        returnData.draw = result.draw;//这里直接自行返回了draw计数器,应该由后台返回
+                        returnData.recordsTotal = result.recordsTotal;//总记录数
+                        returnData.recordsFiltered = result.recordsFiltered;//后台不实现过滤功能，每次查询均视作全部结果
+                        returnData.data = result.data;
+                        //调用DataTables提供的callback方法，代表数据已封装完成并传回DataTables进行渲染
+                        //此时的数据需确保正确无误，异常判断应在执行此回调前自行处理完毕
+                        callback(returnData);
+
+                    },
+                    error: function(XMLHttpRequest, textStatus, errorThrown) {
+                        alert("查询失败");
+                    }
+                });
+            },
              "columns": [
                  {
                      "sClass": "text-center",
@@ -190,6 +229,7 @@
                  { "data": "url" },
                  { "data": "type" },
                  { "data": "sort" },
+                 { "data": "systemId" },
              ],
              columnDefs:[
                  { "orderable": false, "targets": 1 },
@@ -209,7 +249,24 @@
                      },
                      "targets": 5
                  },
-                 { "orderable": false, "targets": 6 }
+                 { "orderable": false, "targets": 6 },
+                 {
+                     "orderable": false,
+                     "render": function(data, type, row) {
+                         if(data==0){
+                             return "系统设置";
+                         }else  if(data==2){
+                             return "规培系统";
+                         }else if(data==1){
+                             return "考试系统";
+                         }else if(data==3){
+                             return "osce";
+                         } else if(data==4){
+                             return "360互评";
+                         }
+                     },
+                     "targets": 7
+                 }
              ],
 
          } );
@@ -221,6 +278,16 @@
      function search(){
          table.ajax.reload();
      }
+    function getQueryCondition(data){
+        var param = {};
+        //组装排序参数
+        param.systemId = $("#systemId-search").val();//查询条件
+        //组装分页参数
+        param.start = data.start;
+        param.length = data.length;
+        param.draw = data.draw;
+        return param;
+    }
 
      //添加用户
      function addResources() {
@@ -314,6 +381,11 @@
  		$('#permissionsModal').modal();
  		
      }
+
+
+    var onlovSystemsList = [];
+    //初始化将测试集包含的用例存在数组里面
+
      
      function delById() {
          if ($(".checkchild:checked").length < 1)
