--- a/src/main/resources/templates/common/student-header.html
+++ b/src/main/resources/templates/common/student-header.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>360 考评 SYSTEM  | Dashboard</title>
+	<title>Admin 系统 SYSTEM  | Dashboard</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
@@ -54,7 +54,7 @@
 			<div class="container-fluid">
 				<!-- begin mobile sidebar expand / collapse button -->
 				<div class="navbar-header">
-					<a href="index.html" class="navbar-brand"><span class="navbar-logo"></span>360考评</a>
+					<a href="index.html" class="navbar-brand"><span class="navbar-logo"></span>Admin系统</a>
 					<button type="button" class="navbar-toggle" data-click="sidebar-toggled">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -132,7 +132,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>360 考评 SYSTEM  | Dashboard</title>
+	<title>Admin 系统 SYSTEM  | Dashboard</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
@@ -179,7 +179,7 @@
 			<div class="container-fluid">
 				<!-- begin mobile sidebar expand / collapse button -->
 				<div class="navbar-header">
-					<a href="index.html" class="navbar-brand"><span class="navbar-logo"></span>360考评</a>
+					<a href="index.html" class="navbar-brand"><span class="navbar-logo"></span>Admin系统</a>
 					<button type="button" class="navbar-toggle" data-click="sidebar-toggled">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
